Fixed characters img cropping

--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -82,9 +82,7 @@ footer
 
 .Character img,.EmptyCharacter img,.Weapon img
 {
-	width:6vw;
-	
-	height:6vw;
+
 	
 	object-fit: fill;
 }
@@ -94,7 +92,7 @@ footer
 {
 	background: #5F5B6B;
 	width:auto;
-	min-width:6vw;
+	min-width:fit-content;
 	height:fit-content;
 	
 	overflow:hidden;
@@ -106,7 +104,7 @@ footer
 	user-select: none;
 	transition: all 0.1s;
 	
-	font-size:1vw;
+
 	font-weight:bold;
 	text-align:center;
 
@@ -121,7 +119,7 @@ footer
 
 .Character span, .EmptyCharacter p, .Weapon p
 {
-	margin:0;
+
 	font-size:1em;
 }
 
@@ -325,7 +323,7 @@ h2
 {
 	
 
-	height:auto%;
+	height:auto;
 	grid-row:2;
 	grid-column:2;
 	
@@ -364,7 +362,7 @@ margin-top:2%;
 
 .GeoCharacter,.PyroCharacter,.HydroCharacter,.ElectroCharacter,.AnemoCharacter,.CryoCharacter
 {	
-	
+	margin-top: -0.40em;
 }
 
 
